# hciparse

./: README.md  pyproject.toml
examples/: complexExample.py  testingLogparse.py
examples/android/: decodeAndroidDumpsys.py  getAndroidBTDumpFilename.py  getAndroidBTDumpSpecifyFilename.py
examples/bt/: parseHciAclPacket.py  parseHciCommandPacket.py  parseHciEventPacket.py  parseHciUartType.py
examples/logparse/: parseCaptureFile.py  parseCaptureFileHumanReadable.py
hciparse/: __init__.py
hciparse/android/: __init__.py  phone.py  snoopphone.py
hciparse/bt/: __init__.py  hci.py
hciparse/logparse/: __init__.py  logparse.py
hciparse/main_cli/: CLIhciParseOptions.py  CLIhciParseTable.py
